# Ejercicio-sistema-hospedaje

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt  Main.cpp  Propietario.h
test/: Ejercicio_sistema_hospedaje_test.cpp
